--- a/static/css/blue.css
+++ b/static/css/blue.css
@@ -29,6 +29,10 @@ a:focus {
   color: rgb(52,60,86);
 }
 
+.home-section {
+  padding: 50px 0 50px 0;
+}
+
 /*************************************************
  *  Blog Articles
  **************************************************/
@@ -139,7 +143,7 @@ a:focus {
 html {
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 15px;
   color: rgba(0,0,0,0.8);
   line-height: 1.65;
 }
